--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "axios": "^0.21.1",
     "big-number": "^2.0.0",
     "react": "^17.0.2",
+    "react-countdown": "^2.3.2",
     "react-debounce-input": "^3.2.5",
     "react-dom": "^17.0.2",
     "react-ga4": "^1.4.0",
