--- a/package.json
+++ b/package.json
@@ -4,13 +4,13 @@
   "private": true,
   "dependencies": {
     "@craco/craco": "^6.2.0",
-    "@dataxfi/datax.js": "/Users/keith/Development/hashmesh/dataxfi/datax.js/dataxfi-datax.js-1.1.34.tgz",
+    "@dataxfi/datax.js": "1.1.36",
     "@walletconnect/web3-provider": "^1.7.3",
     "axios": "^0.21.1",
     "big-number": "^2.0.0",
     "react": "^17.0.2",
     "react-collapse": "^5.1.1",
-    "react-debounce-input": "^3.2.5",
+    "react-debounce-input": "3.2.4",
     "react-dom": "^17.0.2",
     "react-ga4": "^1.4.0",
     "react-git-info": "^2.0.0",
