--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "big-number": "^2.0.0",
     "graphql": "^16.5.0",
     "graphql-request": "^4.3.0",
+    "rc-slider": "^10.1.1",
     "react": "^17.0.2",
     "react-collapse": "^5.1.1",
     "react-debounce-input": "^3.2.5",
